test/good/polymorphic-option.sam
// ERROR_COUNT: 0

class Option<T>(Some(T), None(bool)) {
  function <T> none(): Option<T> = None(true)
  method toSome(t: T): Option<T> = Some(t)
}

class Main {
  function main(): Option<string> = Option.none().toSome("hi")
  function main2(): Option<string> = {
    val a = Option.none();
    a.toSome("hi")
  }

  function main3(): Option<string> = {
    val a: Option<string> = Option.none();
    a.toSome("hi")
  }
}
